Commit all changes

--- a/OpenAIChallenges/Day02-Dall-e/DallESampleApp/appsettings.json
+++ b/OpenAIChallenges/Day02-Dall-e/DallESampleApp/appsettings.json
@@ -1,7 +1,9 @@
 {
-    "AzureOAI": {
-      "AzureOAIEndpoint": "https://barutaidemo.openai.azure.com/",
-      "AzureOAIKey": "c5c31b1c1aaa4919ba701fbcec03f2f8",
-      "AzureOAIVersion": "2024-02-01"
-    }
+  "AzureOAI": {
+    "folderName": "C:\\Codes\\CoPilotApp\\Demos\\OpenAIChallenges\\Day02-Dall-e\\DallESampleApp\\DownloadedImages\\",
+    "aoaiKey": "c5c31b1c1aaa4919ba701fbcec03f2f8",
+    "aoaiURL": "https://barutaidemo.openai.azure.com/",
+    "model": "dalledemo",
+    "imgSize": "1024x1024"
   }
+}
