--- a/OpenAIChallenges/Day02-Dall-e/DallESampleApp/appsettings.json
+++ b/OpenAIChallenges/Day02-Dall-e/DallESampleApp/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AzureOAI": {
     "folderName": "C:\\Codes\\CoPilotApp\\Demos\\OpenAIChallenges\\Day02-Dall-e\\DallESampleApp\\DownloadedImages\\",
-    "aoaiKey": "c5c31b1c1aaa4919ba701fbcec03f2f8",
-    "aoaiURL": "https://barutaidemo.openai.azure.com/",
-    "model": "dalledemo",
+    "aoaiKey": "***",
+    "aoaiURL": "https://***.openai.azure.com/",
+    "model": "***",
     "imgSize": "1024x1024"
   }
 }
